Closed Bug 629971 Opened 13 years ago Closed 13 years ago

Failure on shared non-libxul build: undefined reference to `ShInitialize'

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smontagu, Unassigned)

References

Details

../../content/canvas/src/libgkconcvs_s.a(WebGLContextValidate.o): In function `mozilla::WebGLContext::InitAndValidateGL()':
/home/smontagu/mozwork/hgtree/mozilla/content/canvas/src/WebGLContextValidate.cpp:512: undefined reference to `ShInitialize'
/usr/bin/ld.bfd.real: libgklayout.so: hidden symbol `ShInitialize' isn't defined
/usr/bin/ld.bfd.real: final link failed: Nonrepresentable section on output
collect2: ld returned 1 exit status

It looks as if bug 629538 didn't fully re-apply angle-shared.patch
http://hg.mozilla.org/mozilla-central/rev/28bef0ccd927
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.