Bug 629971 - fix non-libXUL build: had damaged and not properly applied angle-shared.patch - r+a=bustage-of-non-libxul-build